# vey

./: .cirrus.yml  .codecov.yml  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.ja_JP.md  README.md  README.zh_CN.md  SECURITY.md
lib/g3-daemon/: Cargo.toml
lib/g3-fluentd/: Cargo.toml
lib/g3-fluentd/src/: format.rs  lib.rs
lib/g3-io-ext/: Cargo.toml
lib/g3-io-ext/benches/: io_rate_limit.rs
lib/g3-stdlog/: Cargo.toml
lib/g3-stdlog/src/: format.rs  lib.rs
lib/g3-syslog/: Cargo.toml
lib/g3-syslog/src/: async_streamer.rs  lib.rs  yaml.rs
lib/g3-udpdump/: Cargo.toml
lib/vey-h2/: Cargo.toml
lib/vey-h2/src/: lib.rs
lib/vey-http/: Cargo.toml
lib/vey-http/src/: lib.rs
lib/vey-imap-proto/: Cargo.toml
lib/vey-imap-proto/src/: lib.rs  pipeline.rs
lib/vey-json/: Cargo.toml
lib/vey-json/src/: callback.rs  key.rs  lib.rs  map.rs
lib/vey-msgpack/: Cargo.toml
lib/vey-msgpack/src/: lib.rs
lib/vey-redis-client/: Cargo.toml
lib/vey-redis-client/src/: lib.rs  yaml.rs
lib/vey-resolver/: Cargo.toml  build.rs
lib/vey-resolver/src/: config.rs  error.rs  handle.rs  lib.rs  message.rs  query.rs  record.rs  resolver.rs  runtime.rs  stats.rs
lib/vey-reuseport/: Cargo.toml  build.rs
lib/vey-reuseport/src/: lib.rs  quic.rs  tcp.rs  udp.rs
lib/vey-runtime/: Cargo.toml
lib/vey-runtime/src/: lib.rs
lib/vey-rustls-provider/: Cargo.toml  build.rs
lib/vey-rustls-provider/src/: lib.rs
lib/vey-socks/: Cargo.toml
lib/vey-socks/src/: lib.rs
lib/vey-statsd-client/: Cargo.toml
lib/vey-statsd-client/src/: lib.rs  tag.rs
lib/vey-tls-cert/: Cargo.toml  build.rs
lib/vey-tls-cert/src/: lib.rs
lib/vey-tls-ticket/: Cargo.toml
lib/vey-tls-ticket/src/: lib.rs  update.rs
lib/vey-yaml/: Cargo.toml
lib/vey-yaml/src/: callback.rs  hash.rs  hybrid.rs  lib.rs  macros.rs  util.rs
vey-bench/: Cargo.toml  README.md  build.rs  vey-bench.spec
vey-bench/debian/: changelog  control  rules  vey-bench.install
vey-bench/src/: build.rs  lib.rs  main.rs  opts.rs  progress.rs  worker.rs
vey-bench/src/module/: mod.rs  openssl.rs  proxy_protocol.rs  rustls.rs  socket.rs
vey-dcgen/: Cargo.toml  README.md  build.rs  vey-dcgen.spec
vey-dcgen/debian/: changelog  control  rules  vey-dcgen.install  vey-dcgen@.service
vey-dcgen/docker/: alpine.Dockerfile  debian.Dockerfile
vey-dcgen/src/: build.rs  lib.rs  main.rs  opts.rs
vey-dcgen/src/backend/: mod.rs  stats.rs
vey-dcgen/src/config/: backend.rs  mod.rs
vey-dcgen/src/frontend/: mod.rs  stats.rs  udp_dgram.rs
vey-dcgen/src/stat/: mod.rs
vey-gateway/: Cargo.toml  README.md  build.rs  vey-gateway.spec
vey-gateway/debian/: changelog  control  rules  vey-gateway.docs  vey-gateway.install  vey-gateway@.service
vey-gateway/examples/benchmark/: main.yaml
vey-gateway/proto/: Cargo.toml  build.rs
vey-gateway/proto/schema/: proc.capnp
vey-gateway/proto/src/: lib.rs
vey-gateway/src/: build.rs  lib.rs  main.rs  opts.rs  signal.rs
vey-gateway/src/backend/: dummy_close.rs  mod.rs  ops.rs  registry.rs  stream_tcp.rs
vey-gateway/src/config/: log.rs  mod.rs
vey-gateway/src/control/: mod.rs  upgrade.rs
vey-gateway/src/discover/: mod.rs  ops.rs  registry.rs
vey-gateway/src/log/: mod.rs  shared.rs
vey-gateway/src/module/: mod.rs
vey-gateway/src/serve/: error.rs  mod.rs  ops.rs  registry.rs  stats.rs  task.rs
vey-gateway/src/stat/: mod.rs
vey-gateway/utils/ctl/: Cargo.toml
vey-iploc/: Cargo.toml  README.md  build.rs  vey-iploc.spec
vey-iploc/debian/: changelog  control  rules  vey-iploc.install  vey-iploc@.service
vey-iploc/docker/: alpine.Dockerfile  debian.Dockerfile
vey-iploc/src/: build.rs  lib.rs  main.rs  opts.rs
vey-iploc/src/config/: geoip.rs  mod.rs
vey-iploc/src/frontend/: mod.rs  stats.rs  udp_dgram.rs
vey-iploc/src/stat/: mod.rs
vey-proxy/: CHANGELOG  Cargo.toml  README.md  UserGuide.en_US.md  UserGuide.zh_CN.md  build.rs  vey-proxy.spec
vey-proxy/ci/python3+curl/: test_httpbin.py  test_httpbin_h3.py
vey-proxy/ci/python3+dns/: test_dns.py
vey-proxy/debian/: changelog  control  rules  vey-proxy.docs  vey-proxy.install  vey-proxy@.service
vey-proxy/docker/: alpine.Dockerfile  debian.Dockerfile  lua.alpine.Dockerfile
vey-proxy/examples/: README.md
vey-proxy/examples/benchmark/: main.yaml
vey-proxy/examples/escaper_proxy_socks5/: main.yaml
vey-proxy/examples/escaper_upstream/: main.yaml
vey-proxy/examples/simple_to_statsd/: main.yaml
vey-proxy/proto/: Cargo.toml  build.rs
vey-proxy/proto/schema/: proc.capnp
vey-proxy/proto/src/: lib.rs
vey-proxy/src/: build.rs  lib.rs  main.rs  opts.rs  signal.rs
vey-proxy/src/audit/: handle.rs  mod.rs  ops.rs  registry.rs
vey-proxy/src/auth/: cache.rs  mod.rs  ops.rs  registry.rs  site.rs  user.rs
vey-proxy/src/config/: graphviz.rs  log.rs  mermaid.rs  mod.rs  plantuml.rs
vey-proxy/src/control/: mod.rs  quit.rs  upgrade.rs
vey-proxy/src/escape/: egress_notes.rs  egress_path.rs  mod.rs  ops.rs  registry.rs  stats.rs
vey-proxy/src/inspect/: error.rs  mod.rs
vey-proxy/src/log/: audit.rs  mod.rs  resolve.rs  shared.rs
vey-proxy/src/module/: mod.rs
vey-proxy/src/resolve/: deny_all.rs  handle.rs  mod.rs  ops.rs  registry.rs  stats.rs
vey-proxy/src/serve/: error.rs  idle_check.rs  mod.rs  ops.rs  registry.rs  stats.rs  task.rs
vey-proxy/src/stat/: mod.rs
vey-proxy/utils/ctl/: Cargo.toml
vey-proxy/utils/ftp/: Cargo.toml
vey-proxy/utils/lua/: Cargo.toml
vey-statsd/: CHANGELOG  Cargo.toml  README.md  build.rs  vey-statsd.spec
vey-statsd/debian/: changelog  control  rules  vey-statsd.docs  vey-statsd.install  vey-statsd@.service
vey-statsd/examples/export_console/: main.yaml
vey-statsd/examples/export_graphite/: main.yaml
vey-statsd/examples/export_influxdb/: main.yaml
vey-statsd/examples/export_opentsdb/: main.yaml
vey-statsd/proto/: Cargo.toml  build.rs
vey-statsd/proto/schema/: proc.capnp
vey-statsd/proto/src/: lib.rs
vey-statsd/src/: build.rs  lib.rs  main.rs  opts.rs  signal.rs
vey-statsd/src/collect/: mod.rs  ops.rs  registry.rs
(+2479 files in other folders)
