[workspace]
members = [
    "vey-bench",
    "vey-dcgen",
    "vey-iploc",
    "vey-keyless",
    "vey-keyless/proto",
    "vey-keyless/utils/ctl",
    "vey-mkcert",
    "vey-proxy",
    "vey-proxy/proto",
    "vey-proxy/utils/ctl",
    "vey-proxy/utils/ftp",
    "vey-proxy/utils/lua",
    "vey-statsd",
    "vey-statsd/proto",
    "vey-statsd/utils/ctl",
    "vey-gateway",
    "vey-gateway/proto",
    "vey-gateway/utils/ctl",
    "lib/vey-build-env",
    "lib/vey-cert-agent",
    "lib/vey-clap",
    "lib/vey-codec",
    "lib/vey-compat",
    "lib/vey-ctl",
    "lib/vey-daemon",
    "lib/vey-datetime",
    "lib/vey-dpi",
    "lib/vey-fluentd",
    "lib/vey-ftp-client",
    "lib/vey-geoip-db",
    "lib/vey-geoip-types",
    "lib/vey-h2",
    "lib/vey-hickory-client",
    "lib/vey-histogram",
    "lib/vey-http",
    "lib/vey-icap-client",
    "lib/vey-imap-proto",
    "lib/vey-io-ext",
    "lib/vey-io-sys",
    "lib/vey-ip-locate",
    "lib/vey-journal",
    "lib/vey-json",
    "lib/vey-macros",
    "lib/vey-msgpack",
    "lib/vey-openssl",
    "lib/vey-redis-client",
    "lib/vey-resolver",
    "lib/vey-runtime",
    "lib/vey-slog-types",
    "lib/vey-smtp-proto",
    "lib/vey-socket",
    "lib/vey-socks",
    "lib/vey-statsd-client",
    "lib/vey-std-ext",
    "lib/vey-stdlog",
    "lib/vey-syslog",
    "lib/vey-tls-cert",
    "lib/vey-tls-ticket",
    "lib/vey-types",
    "lib/vey-udpdump",
    "lib/vey-xcrypt",
    "lib/vey-yaml",
    "scripts/capnp-generate",
]
default-members = [
    "vey-bench",
    "vey-dcgen",
    "vey-iploc",
    "vey-mkcert",
    "vey-proxy",
    "vey-proxy/utils/ctl",
    "vey-proxy/utils/ftp",
    "vey-proxy/utils/lua",
    "vey-statsd",
    "vey-statsd/utils/ctl",
    "vey-gateway",
    "vey-gateway/utils/ctl",
    "vey-keyless",
    "vey-keyless/proto",
    "vey-keyless/utils/ctl",
    "scripts/capnp-generate",
]
resolver = "3"

[workspace.package]
license = "Apache-2.0"
edition = "2024"
rust-version = "1.90.0"

[workspace.dependencies]
#
anyhow = "1.0"
thiserror = "2.0"
itertools = "0.14"
rand = { version = "0.10", default-features = false, features = ["thread_rng"] }
fastrand = "2.3"
memchr = "2.8"
constant_time_eq = "0.4"
uuid = "1.21"
base64 = "0.22"
regex = "1.11"
arc-swap = "1.8"
chrono = { version = "0.4.39", default-features = false }
ascii = "1.0"
humanize-rs = "0.1"
#
portable-atomic = "1.9"
itoa = "1.0"
atoi = "2.0"
zmij = "1.0"
num-traits = "0.2"
#
once_cell = "1.21"
bytes = "1.11"
smallvec = "1.15"
smol_str = { version = "0.3", default-features = false }
arcstr = { version = "1.2", features = ["std"] }
foldhash = "0.2"
ahash = "0.8"
rustc-hash = "2.1"
fnv = "1"
indexmap = "2.9"
ip_network = "0.4"
ip_network_table = "0.2"
radix_trie = "0.3"
fixedbitset = "0.5"
bitflags = "2.11"
lru = { version = "0.16", default-features = false }
#
blake3 = { version = "1.5", default-features = false }
hex = "0.4.2"
hex-literal = "1.1"
#
idna = "1.0"
url = "2.1"
mime = "0.3"
percent-encoding = "2.1"
http = "1.2"
h2 = "0.4"
h3-quinn = "0.0.10"
h3 = "0.0.8"
#
log = "0.4"
slog = { version = "2.8", features = ["dynamic-keys"] }
hdrhistogram = { version = "7.5", default-features = false }
#
clap = "4.5.60"
clap_complete = "4.5.60"
#
tokio = "1.51.0"
tokio-util = "0.7"
tokio-test = "0.4"
futures-util = "0.3"
atomic-waker = "1.1"
async-trait = "0.1"
async-recursion = "1.1"
pin-project-lite = "0.2"
#
rustls-pki-types = { version = "1", default-features = false }
rustls = { version = "0.23.37", default-features = false, features = ["std", "tls12", "brotli"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12"] }
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
quinn-udp = { version = "0.5.9", default-features = false, features = ["fast-apple-datapath"] }
#
openssl = { package = "variant-ssl", version = "0.17.11" }
openssl-sys = { package = "variant-ssl-sys", version = "0.17.11" }
openssl-probe = "0.2"
#
kanal = { version = "0.1.1", default-features = false }
#
c-ares = { version = "12.0", default-features = false }
c-ares-resolver = { version = "11.0", default-features = false }
c-ares-sys = { version = "11.0", default-features = false }
hickory-proto = { version = "0.25", default-features = false }
hickory-client = { version = "0.25", default-features = false }
#
capnp-rpc = "0.25"
capnp = "0.25"
capnpc = "0.25"
#
libc = "0.2.182"
rustix = { version = "1.1", default-features = false }
windows-sys = "0.61"
#
serde = "1.0"
yaml-rust = { package = "yaml-rust2", version = "0.11" }
serde_json = "1.0"
rmp-serde = "1"
rmp = "0.8"
rmpv = "1.0"
#
redis = { version = "1.0", default-features = false }
#
mlua = "0.11.6"
pyo3 = { version = "0.28", default-features = false, features = ["auto-initialize"] }
#
cfg-if = "1.0"
#
vey-build-env = { version = "0.2", path = "lib/vey-build-env" }
vey-cert-agent = { version = "0.3", path = "lib/vey-cert-agent" }
vey-clap = { version = "0.2", path = "lib/vey-clap" }
vey-codec = { version = "0.1", path = "lib/vey-codec" }
vey-compat = { version = "0.2", path = "lib/vey-compat" }
vey-ctl = { version = "0.2", path = "lib/vey-ctl" }
vey-daemon = { version = "0.4", path = "lib/vey-daemon" }
vey-datetime = { version = "0.2", path = "lib/vey-datetime" }
vey-dpi = { version = "0.3", path = "lib/vey-dpi" }
vey-fluentd = { version = "0.3", path = "lib/vey-fluentd" }
vey-ftp-client = { version = "0.5", path = "lib/vey-ftp-client" }
vey-geoip-db = { version = "0.3", path = "lib/vey-geoip-db" }
vey-geoip-types = { version = "0.2", path = "lib/vey-geoip-types" }
vey-h2 = { version = "0.3", path = "lib/vey-h2" }
vey-hickory-client = { version = "0.3", path = "lib/vey-hickory-client" }
vey-histogram = { version = "0.2", path = "lib/vey-histogram" }
vey-http = { version = "0.5", path = "lib/vey-http" }
vey-icap-client = { version = "0.4", path = "lib/vey-icap-client" }
vey-imap-proto = { version = "0.3", path = "lib/vey-imap-proto" }
vey-io-ext = { version = "0.9", path = "lib/vey-io-ext" }
vey-io-sys = { version = "0.1", path = "lib/vey-io-sys" }
vey-ip-locate = { version = "0.3", path = "lib/vey-ip-locate" }
vey-journal = { version = "0.4", path = "lib/vey-journal" }
vey-json = { version = "0.5", path = "lib/vey-json" }
vey-macros = { version = "0.1", path = "lib/vey-macros" }
vey-msgpack = { version = "0.4", path = "lib/vey-msgpack" }
vey-openssl = { version = "0.4", path = "lib/vey-openssl" }
vey-redis-client = { version = "0.3", path = "lib/vey-redis-client" }
vey-resolver = { version = "0.9", path = "lib/vey-resolver" }
vey-runtime = { version = "0.5", path = "lib/vey-runtime" }
vey-slog-types = { version = "0.3", path = "lib/vey-slog-types" }
vey-smtp-proto = { version = "0.3", path = "lib/vey-smtp-proto" }
vey-socket = { version = "0.6", path = "lib/vey-socket" }
vey-socks = { version = "0.4", path = "lib/vey-socks" }
vey-statsd-client = { version = "0.3", path = "lib/vey-statsd-client" }
vey-std-ext = { version = "0.1", path = "lib/vey-std-ext" }
vey-stdlog = { version = "0.3", path = "lib/vey-stdlog" }
vey-syslog = { version = "0.8", path = "lib/vey-syslog" }
vey-tls-cert = { version = "0.7", path = "lib/vey-tls-cert" }
vey-tls-ticket = { version = "0.3", path = "lib/vey-tls-ticket" }
vey-types = { version = "0.7", path = "lib/vey-types" }
vey-udpdump = { version = "0.3", path = "lib/vey-udpdump" }
vey-xcrypt = { version = "0.3", path = "lib/vey-xcrypt" }
vey-yaml = { version = "0.7", path = "lib/vey-yaml" }

[profile.release-lto]
inherits = "release"
strip = true
lto = true

[profile.release-dbg]
inherits = "release"
debug = 1
debug-assertions = false

[profile.release-z]
inherits = "release"
opt-level = "z"
panic = "abort"
codegen-units = 1
strip = true
lto = true
