[package]
name = "vey-bench"
version = "0.9.7"
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Multi-Target Benchmark Tool developed by the VEY project"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
indicatif = "0.18"
tokio = { workspace = true, features = ["rt", "net", "macros", "signal"] }
http.workspace = true
url.workspace = true
h2.workspace = true
h3 = { workspace = true, optional = true }
h3-quinn = { workspace = true, optional = true }
quinn = { workspace = true, optional = true, features = ["rustls"] }
bytes.workspace = true
futures-util.workspace = true
atomic-waker.workspace = true
openssl.workspace = true
openssl-sys.workspace = true # for openssl variant detection
openssl-probe = { workspace = true, optional = true }
rustls.workspace = true
rustls-pki-types = { workspace = true, features = ["std"] }
tokio-rustls.workspace = true
hdrhistogram.workspace = true
ahash.workspace = true
rustc-hash.workspace = true
concurrent-queue = "2.5"
hex.workspace = true
itoa.workspace = true
fastrand.workspace = true
base64.workspace = true
hickory-client.workspace = true
hickory-proto.workspace = true
vey-runtime.workspace = true
vey-std-ext.workspace = true
vey-types = { workspace = true, features = ["openssl", "rustls"] }
vey-clap = { workspace = true, features = ["http", "limit"] }
vey-codec = { workspace = true, features = ["thrift"] }
vey-socket.workspace = true
g3-http.workspace = true
g3-socks.workspace = true
vey-io-ext = { workspace = true, features = ["openssl", "rustls"] }
vey-statsd-client.workspace = true
vey-histogram.workspace = true
vey-tls-cert.workspace = true
vey-openssl.workspace = true
vey-hickory-client.workspace = true

[build-dependencies]
vey-build-env.workspace = true

[features]
default = ["quic", "rustls-ring"]
quic = ["vey-types/quic", "g3-socks/quic", "vey-io-ext/quic", "vey-hickory-client/quic", "dep:quinn", "dep:h3", "dep:h3-quinn"]
rustls-ring = ["vey-types/rustls-ring", "rustls/ring", "quinn?/rustls-ring"]
rustls-aws-lc = ["vey-types/rustls-aws-lc", "rustls/aws-lc-rs", "quinn?/rustls-aws-lc-rs"]
rustls-aws-lc-fips = ["vey-types/rustls-aws-lc-fips", "rustls/fips", "quinn?/rustls-aws-lc-rs-fips"]
vendored-openssl = ["openssl/vendored", "openssl-probe"]
vendored-tongsuo = ["openssl/tongsuo", "openssl-probe"]
vendored-boringssl = ["openssl/boringssl", "openssl-probe"]
vendored-aws-lc = ["openssl/aws-lc", "openssl-probe"]
vendored-aws-lc-fips = ["openssl/aws-lc-fips", "openssl-probe"]
openssl-async-job = ["vey-openssl/async-job", "vey-runtime/openssl-async-job"]
