[package]
name = "vey-dcgen"
version = "0.9.0"
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Dynamic certificate generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
log = { workspace = true, features = ["max_level_trace", "release_max_level_debug"] }
openssl.workspace = true
openssl-sys.workspace = true # for openssl variant detection
tokio = { workspace = true, features = ["macros", "net", "io-util", "time", "signal"] }
kanal = { workspace = true, features = ["async"] }
yaml-rust.workspace = true
vey-std-ext.workspace = true
vey-types.workspace = true
vey-yaml = { workspace = true, features = ["histogram", "openssl"] }
g3-daemon.workspace = true
vey-statsd-client.workspace = true
vey-histogram.workspace = true
vey-tls-cert.workspace = true
vey-cert-agent.workspace = true
vey-socket.workspace = true

[build-dependencies]
vey-build-env.workspace = true

[features]
default = []
vendored-openssl = ["openssl/vendored"]
vendored-tongsuo = ["openssl/tongsuo", "vey-cert-agent/tongsuo"]
vendored-boringssl = ["openssl/boringssl"]
vendored-aws-lc = ["openssl/aws-lc"]
vendored-aws-lc-fips = ["openssl/aws-lc-fips"]
