[package]
name = "vey-gateway"
version = "0.4.0"
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Generic Gateway"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
yaml-rust.workspace = true
serde_json.workspace = true
log = { workspace = true, features = ["max_level_trace", "release_max_level_debug"] }
slog = { workspace = true, features = ["max_level_trace", "release_max_level_debug"] }
clap.workspace = true
clap_complete.workspace = true
arc-swap.workspace = true
ahash.workspace = true
foldhash.workspace = true
itoa.workspace = true
ascii.workspace = true
capnp.workspace = true
capnp-rpc.workspace = true
bytes.workspace = true
tokio = { workspace = true, features = ["net", "sync", "time"] }
futures-util.workspace = true
openssl.workspace = true
openssl-sys.workspace = true # for openssl variant detection
openssl-probe = { workspace = true, optional = true }
rustls.workspace = true
rustls-pki-types.workspace = true
quinn = { workspace = true, optional = true, features = ["rustls"] }
tokio-rustls.workspace = true
chrono = { workspace = true, features = ["clock"] }
uuid.workspace = true
bitflags.workspace = true
kanal = { workspace = true, features = ["async"] }
rustc-hash.workspace = true
vey-macros.workspace = true
vey-codec = { workspace = true, features = ["tls"] }
g3-daemon = { workspace = true, features = ["event-log"] }
vey-dpi.workspace = true
vey-yaml = { workspace = true, features = ["acl-rule", "route", "openssl", "rustls", "histogram"] }
vey-std-ext.workspace = true
vey-types = { workspace = true, features = ["acl-rule", "route", "openssl", "rustls"] }
vey-socket.workspace = true
g3-io-ext = { workspace = true, features = ["openssl", "rustls"] }
vey-openssl.workspace = true
g3-statsd-client.workspace = true
vey-histogram.workspace = true
vey-slog-types.workspace = true
g3-tls-ticket = { workspace = true, features = ["yaml"] }
vey-gateway-proto = { path = "proto" }

[build-dependencies]
vey-build-env.workspace = true

[features]
default = ["quic", "rustls-ring"]
quic = ["g3-daemon/quic", "vey-yaml/quinn", "vey-types/quinn", "dep:quinn"]
rustls-ring = ["vey-types/rustls-ring", "rustls/ring", "quinn?/rustls-ring"]
rustls-aws-lc = ["vey-types/rustls-aws-lc", "rustls/aws-lc-rs", "quinn?/rustls-aws-lc-rs"]
rustls-aws-lc-fips = ["vey-types/rustls-aws-lc-fips", "rustls/fips", "quinn?/rustls-aws-lc-rs-fips"]
vendored-openssl = ["openssl/vendored", "openssl-probe"]
vendored-tongsuo = ["openssl/tongsuo", "openssl-probe"]
vendored-boringssl = ["openssl/boringssl", "openssl-probe"]
vendored-aws-lc = ["openssl/aws-lc", "openssl-probe"]
vendored-aws-lc-fips = ["openssl/aws-lc-fips", "openssl-probe"]
openssl-async-job = ["vey-openssl/async-job", "g3-daemon/openssl-async-job"]
