[package]
name = "vey-gateway"
version = "0.4.0"
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Generic Gateway"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
cfg-if.workspace = true
yaml-rust.workspace = true
serde_json.workspace = true
log = { workspace = true, features = ["max_level_trace", "release_max_level_debug"] }
slog = { workspace = true, features = ["max_level_trace", "release_max_level_debug"] }
clap.workspace = true
clap_complete.workspace = true
arc-swap.workspace = true
ahash.workspace = true
foldhash.workspace = true
itoa.workspace = true
ascii.workspace = true
capnp.workspace = true
capnp-rpc.workspace = true
bytes.workspace = true
tokio = { workspace = true, features = ["net", "sync", "time"] }
futures-util.workspace = true
openssl.workspace = true
openssl-sys.workspace = true # for openssl variant detection
openssl-probe = { workspace = true, optional = true }
rustls.workspace = true
rustls-pki-types.workspace = true
quinn = { workspace = true, optional = true, features = ["rustls"] }
tokio-rustls.workspace = true
chrono = { workspace = true, features = ["clock"] }
uuid.workspace = true
bitflags.workspace = true
kanal = { workspace = true, features = ["async"] }
rustc-hash.workspace = true
vey-macros.workspace = true
vey-codec = { workspace = true, features = ["tls"] }
vey-daemon = { workspace = true, features = ["event-log"] }
vey-yaml = { workspace = true, features = ["acl-rule", "route", "openssl", "rustls", "histogram"] }
vey-std-ext.workspace = true
vey-types = { workspace = true, features = ["acl-rule", "route", "openssl", "rustls"] }
vey-socket.workspace = true
vey-io-ext = { workspace = true, features = ["openssl", "rustls"] }
vey-openssl.workspace = true
vey-statsd-client.workspace = true
vey-histogram.workspace = true
vey-slog-types.workspace = true
vey-tls-ticket = { workspace = true, features = ["yaml"] }
vey-rustls-provider.workspace = true
vey-jemalloc = { workspace = true, optional = true }
vey-mimalloc = { workspace = true, optional = true }
vey-gateway-proto = { path = "proto" }

[build-dependencies]
vey-build-env.workspace = true

[features]
default = ["quic", "rustls-ring"]
jemalloc = ["dep:vey-jemalloc", "vey-daemon/jemalloc"]
mimalloc = ["dep:vey-mimalloc"]
vendored-mimalloc = ["mimalloc", "vey-mimalloc?/vendored"]
secure-vendored-mimalloc = ["mimalloc", "vey-mimalloc?/secure"]
quic = ["vey-daemon/quic", "vey-yaml/quinn", "vey-types/quinn", "dep:quinn"]
rustls-ring = ["vey-rustls-provider/rustls-ring", "vey-types/rustls-ring", "quinn?/rustls-ring"]
rustls-aws-lc = ["vey-rustls-provider/rustls-aws-lc", "vey-types/rustls-aws-lc", "quinn?/rustls-aws-lc-rs"]
rustls-aws-lc-fips = ["vey-rustls-provider/rustls-aws-lc-fips", "vey-types/rustls-aws-lc-fips", "quinn?/rustls-aws-lc-rs-fips"]
vendored-openssl = ["openssl/vendored", "openssl-probe"]
vendored-tongsuo = ["openssl/tongsuo", "openssl-probe"]
vendored-boringssl = ["openssl/boringssl", "openssl-probe"]
vendored-aws-lc = ["openssl/aws-lc", "openssl-probe"]
vendored-aws-lc-fips = ["openssl/aws-lc-fips", "openssl-probe"]
openssl-async-job = ["vey-openssl/async-job", "vey-daemon/openssl-async-job"]
