[package]
name = "vey-iploc"
version = "0.4.0"
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "IP Locate Service"

[dependencies]
anyhow.workspace = true
clap.workspace = true
log = { workspace = true, features = ["max_level_trace", "release_max_level_debug"] }
tokio = { workspace = true, features = ["net", "io-util", "time", "signal", "macros"] }
yaml-rust.workspace = true
vey-yaml.workspace = true
vey-daemon.workspace = true
vey-statsd-client.workspace = true
vey-geoip-types.workspace = true
vey-geoip-db.workspace = true
vey-ip-locate.workspace = true
vey-socket.workspace = true
vey-types.workspace = true

[build-dependencies]
vey-build-env.workspace = true
