[package]
name = "vey-proxy"
version = "1.13.2"
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Generic Proxy Server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
async-recursion.workspace = true
clap.workspace = true
clap_complete.workspace = true
arcstr.workspace = true
yaml-rust.workspace = true
futures-util.workspace = true
rand.workspace = true
fastrand.workspace = true
zeroize.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "rt", "signal", "sync", "time", "io-util", "net", "fs"] }
tokio-rustls.workspace = true
rustls.workspace = true
quinn = { workspace = true, optional = true, features = ["rustls"] }
openssl.workspace = true
openssl-sys.workspace = true # for openssl variant detection
openssl-probe = { workspace = true, optional = true }
indexmap.workspace = true
bytes.workspace = true
chrono = { workspace = true, features = ["clock"] }
uuid = { workspace = true, features = ["v4"] }
log = { workspace = true, features = ["max_level_trace", "release_max_level_debug"] }
slog = { workspace = true, features = ["max_level_trace", "release_max_level_debug"] }
percent-encoding.workspace = true
url.workspace = true
http.workspace = true
h2.workspace = true
mime.workspace = true
serde_json.workspace = true
ip_network.workspace = true
ip_network_table.workspace = true
radix_trie.workspace = true
base64.workspace = true
pin-project-lite.workspace = true
memchr.workspace = true
arc-swap.workspace = true
capnp-rpc.workspace = true
capnp.workspace = true
itoa.workspace = true
redis = { workspace = true, features = ["aio", "tokio-comp"] }
ascii.workspace = true
ahash.workspace = true
foldhash.workspace = true
bitflags.workspace = true
fixedbitset.workspace = true
rustc-hash.workspace = true
fnv.workspace = true
rmpv.workspace = true
kanal = { workspace = true, features = ["async"] }
lru.workspace = true
regex.workspace = true
mlua = { workspace = true, features = ["send"], optional = true }
pyo3 = { workspace = true, features = ["auto-initialize"], optional = true }
vey-cert-agent = { workspace = true, features = ["yaml"] }
vey-codec = { workspace = true, features = ["ldap", "tls"] }
vey-daemon = { workspace = true, features = ["event-log"] }
vey-datetime.workspace = true
vey-dpi.workspace = true
vey-ftp-client = { workspace = true, features = ["yaml"] }
vey-geoip-types.workspace = true
vey-h2.workspace = true
vey-histogram.workspace = true
vey-http.workspace = true
vey-icap-client = { workspace = true, features = ["yaml"] }
vey-imap-proto.workspace = true
vey-io-ext = { workspace = true, features = ["resolver", "openssl", "rustls", "log"] }
vey-io-sys.workspace = true
vey-ip-locate = { workspace = true, features = ["yaml"] }
vey-json = { workspace = true, features = ["auth-facts", "acl-rule", "resolve", "http", "rustls", "openssl", "histogram"] }
vey-macros.workspace = true
vey-msgpack.workspace = true
vey-openssl.workspace = true
vey-redis-client = { workspace = true, features = ["yaml"] }
vey-resolver = { workspace = true, features = ["yaml", "hickory"] }
vey-slog-types = { workspace = true, features = ["auth", "http", "openssl", "socket"] }
vey-smtp-proto.workspace = true
vey-socket.workspace = true
vey-socks.workspace = true
vey-statsd-client.workspace = true
vey-std-ext.workspace = true
vey-types = { workspace = true, features = ["auth-crypt", "auth-facts", "openssl", "rustls", "acl-rule", "http", "route", "async-log"] }
vey-tls-ticket = { workspace = true, features = ["yaml"] }
vey-udpdump = { workspace = true, features = ["yaml"] }
vey-xcrypt.workspace = true
vey-yaml = { workspace = true, features = ["auth-facts", "resolve", "rustls", "openssl", "acl-rule", "http", "route", "dpi", "histogram", "geoip"] }
vey-proxy-proto = { path = "proto" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "io-util"] }
tokio-test.workspace = true

[build-dependencies]
vey-build-env.workspace = true

[features]
default = ["python", "c-ares", "quic", "rustls-ring"]
lua = ["mlua"]
luajit = ["lua", "mlua/luajit"]
lua53 = ["lua", "mlua/lua53"]
lua54 = ["lua", "mlua/lua54"]
lua55 = ["lua", "mlua/lua55"]
python = ["pyo3"]
c-ares = ["vey-resolver/c-ares"]
quic = ["vey-daemon/quic", "vey-resolver/quic", "vey-yaml/quinn", "vey-types/quinn", "vey-dpi/quic", "dep:quinn"]
rustls-ring = ["vey-types/rustls-ring", "rustls/ring", "quinn?/rustls-ring"]
rustls-aws-lc = ["vey-types/rustls-aws-lc", "rustls/aws-lc-rs", "quinn?/rustls-aws-lc-rs"]
rustls-aws-lc-fips = ["vey-types/rustls-aws-lc-fips", "rustls/fips", "quinn?/rustls-aws-lc-rs-fips"]
vendored-openssl = ["openssl/vendored", "openssl-probe"]
vendored-tongsuo = ["openssl/tongsuo", "openssl-probe", "vey-cert-agent/tongsuo"]
vendored-boringssl = ["openssl/boringssl", "openssl-probe"]
vendored-aws-lc = ["openssl/aws-lc", "openssl-probe"]
vendored-aws-lc-fips = ["openssl/aws-lc-fips", "openssl-probe"]
vendored-c-ares = ["c-ares", "vey-resolver/vendored-c-ares"]
