[package]
name = "g3-daemon"
version = "0.4.0"
license.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
log = { workspace = true, features = ["std"] }
clap.workspace = true
cfg-if.workspace = true
slog = { workspace = true, features = ["max_level_trace", "release_max_level_info"] }
async-trait.workspace = true
yaml-rust.workspace = true
foldhash.workspace = true
itoa.workspace = true
capnp.workspace = true
capnp-rpc.workspace = true
rand.workspace = true
fastrand.workspace = true
uuid = { workspace = true, features = ["v1"] }
rustc-hash.workspace = true
chrono.workspace = true
tokio = { workspace = true, features = ["net", "io-util", "signal", "macros"] }
tokio-util = { workspace = true, features = ["compat"] }
http = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
quinn = { workspace = true, optional = true, features = ["runtime-tokio", "ring"] }
vey-compat.workspace = true
vey-types = { workspace = true, features = ["async-log"] }
vey-stdlog.workspace = true
g3-syslog = { workspace = true, features = ["yaml"] }
g3-fluentd = { workspace = true, optional = true, features = ["yaml"] }
g3-runtime = { workspace = true, features = ["yaml"] }
g3-yaml = { workspace = true, features = ["sched"] }
g3-statsd-client = { workspace = true, features = ["yaml"] }
g3-io-ext.workspace = true
vey-io-sys.workspace = true
vey-socket.workspace = true
vey-std-ext.workspace = true
g3-http = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
rustix = { workspace = true, features = ["process"] }
libc.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
vey-journal.workspace = true

[features]
default = []
event-log = ["dep:g3-fluentd"]
register = ["g3-yaml/http", "dep:http", "dep:serde_json", "dep:g3-http"]
quic = ["dep:quinn", "vey-types/acl-rule"]
openssl-async-job = ["g3-runtime/openssl-async-job"]
