[package]
name = "g3-fluentd"
version = "0.3.0"
license.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
slog.workspace = true
chrono = { workspace = true, features = ["clock"] }
kanal = { workspace = true, features = ["async"] }
rmp.workspace = true
rmp-serde.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["rt", "net", "time", "macros", "io-util"] }
openssl.workspace = true
constant_time_eq.workspace = true
hex.workspace = true
log.workspace = true
yaml-rust = { workspace = true, optional = true }
vey-compat.workspace = true
vey-socket.workspace = true
vey-openssl.workspace = true
vey-types = { workspace = true, features = ["async-log", "openssl"] }
vey-yaml = { workspace = true, optional = true, features = ["openssl"] }

[features]
default = []
yaml = ["dep:vey-yaml", "dep:yaml-rust"]
