[package]
name = "g3-io-ext"
version = "0.9.0"
license.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
tokio = { workspace = true, features = ["time", "net", "io-util", "sync", "rt"] }
tokio-util = { workspace = true, features = ["time"] }
tokio-rustls = { workspace = true, optional = true }
futures-util.workspace = true
pin-project-lite.workspace = true
memchr.workspace = true
fastrand.workspace = true
bytes.workspace = true
ahash.workspace = true
smallvec.workspace = true
arc-swap.workspace = true
quinn = { workspace = true, optional = true }
slog = { workspace = true, optional = true }
vey-io-sys.workspace = true
vey-socket.workspace = true
vey-std-ext.workspace = true
vey-types.workspace = true
vey-resolver = { workspace = true, optional = true }
vey-openssl = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
tokio-test.workspace = true

[features]
default = []
log = ["dep:slog"]
resolver = ["dep:vey-resolver"]
openssl = ["dep:vey-openssl"]
rustls = ["dep:tokio-rustls"]
quic = ["dep:quinn"]
