[package]
name = "g3-stdlog"
version = "0.3.0"
license.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slog.workspace = true
chrono = { workspace = true, features = ["clock"] }
kanal.workspace = true
anstyle = "1.0"
itoa.workspace = true
zmij.workspace = true
vey-types = { workspace = true, features = ["async-log"] }
vey-datetime.workspace = true
