[package]
name = "g3-udpdump"
version = "0.3.0"
license.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
tokio = { workspace = true, features = ["rt", "net", "sync"] }
anyhow = { workspace = true, optional = true }
yaml-rust = { workspace = true, optional = true }
vey-types.workspace = true
vey-socket.workspace = true
g3-io-ext.workspace = true
vey-io-sys.workspace = true
vey-dpi.workspace = true
vey-yaml = { workspace = true, optional = true }

[features]
default = []
yaml = ["dep:vey-yaml", "dep:yaml-rust", "dep:anyhow"]
