[package]
name = "vey-h2"
version = "0.3.0"
license.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
bytes.workspace = true
h2.workspace = true
http.workspace = true
tokio = { workspace = true, features = ["macros", "time"] }
vey-http.workspace = true
vey-io-ext.workspace = true
