[package]
name = "vey-imap-proto"
version = "0.3.0"
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
smol_str.workspace = true
memchr.workspace = true
atoi.workspace = true
ahash.workspace = true
log.workspace = true
tokio = { workspace = true, features = ["io-util"] }
vey-io-ext.workspace = true
