[package]
name = "vey-json"
version = "0.5.0"
license.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
chrono.workspace = true
humanize-rs.workspace = true
idna.workspace = true
ascii.workspace = true
rand.workspace = true
hex.workspace = true
ip_network = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
rustls-pki-types = { workspace = true, optional = true, features = ["std"] }
openssl = { workspace = true, optional = true }
vey-types.workspace = true
vey-histogram = { workspace = true, optional = true }

[features]
default = []
auth-facts = ["vey-types/auth-facts"]
regex = ["dep:regex"]
resolve = ["vey-types/resolve"]
acl-rule = ["regex", "vey-types/acl-rule", "dep:ip_network"]
http = ["vey-types/http"]
rustls = ["vey-types/rustls", "dep:rustls-pki-types"]
openssl = ["vey-types/openssl", "dep:openssl"]
route = ["vey-types/route"]
histogram = ["dep:vey-histogram"]
