[package]
name = "vey-msgpack"
version = "0.4.0"
license.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
rmpv.workspace = true
uuid.workspace = true
atoi.workspace = true
chrono = { workspace = true, features = ["std"] }
rustls-pki-types = { workspace = true, optional = true, features = ["std"] }
openssl = { workspace = true, optional = true }
ip_network = { workspace = true, optional = true }
vey-types.workspace = true
vey-geoip-types = { workspace = true, optional = true }

[features]
default = []
rustls = ["vey-types/rustls", "dep:rustls-pki-types"]
openssl = ["vey-types/openssl", "dep:openssl"]
geoip = ["dep:vey-geoip-types", "dep:ip_network"]
