[package]
name = "vey-redis-client"
version = "0.3.0"
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
redis = { workspace = true, features = ["aio", "tokio-comp"] }
tokio = { workspace = true, features = ["net"] }
tokio-rustls.workspace = true
rustls-pki-types.workspace = true
yaml-rust = { workspace = true, optional = true }
vey-types = { workspace = true, features = ["rustls"] }
vey-socket.workspace = true
vey-yaml = { workspace = true, optional = true, features = ["rustls"] }

[features]
default = []
yaml = ["dep:vey-yaml", "dep:yaml-rust"]
